# CNR_170608_SOURCE_icub_control_lib

./: README.md
DATA/icubcontrollib/: AUTHORS  CMakeLists.txt  Doxyfile  LICENSE
DATA/icubcontrollib/src/: CMakeLists.txt  icub_controller.cpp  icub_controller.h  main.cpp  record.cpp
